package controle;

public class Updater {
}
