package powerup;

public class PowerUp1 {
}
