@startuml
!theme plain

skinparam classAttributeIconSize 0
skinparam defaultFontName "Consolas"
skinparam defaultFontSize 14

title Diagrama de Classes do Projeto Java

package "src" {

    package "background" {
        class EstrelaFrente
        class EstrelaTras
    }

    package "controle" {
        class Contexto
        class ControladorFase
        class Evento
        class Fase
        class Updater
    }

    package "entidades" {
        class Entidade
        class Movel
        class Player
        class Spawner
    }

    package "gamelib" {
        allowmixing
        class GameLib << (L, #ADD1B2) library >> {
        }
        file "GameLib.class" as GameLibClassFile
    }

    package "inimigos" {
        class Inimigo
        class Inimigo1
        class Inimigo2
        class Chefe
        class Chefe1
        class Chefe2
    }

    package "powerup" {
        class PowerUp
        class PowerUp1
        class PowerUp2
    }

    file "config.txt" as ConfigTxt
    file "fase1.txt" as Fase1Txt
    file "fase2.txt" as Fase2Txt
    class Main
    folder "projeteis" as ProjeteisFolder {
        class Base
    }

} ' Fim do package "src"

Movel <|-- Entidade
Movel <|-- EstrelaFrente
Movel <|-- EstrelaTras

Entidade <|-- Player
Entidade <|-- Inimigo
Entidade <|-- PowerUp
Entidade <|-- Base

Player <|-- Chefe

Inimigo <|-- Inimigo1
Inimigo <|-- Inimigo2

PowerUp <|-- PowerUp1
PowerUp <|-- PowerUp2

Chefe <|-- Chefe1
Chefe <|-- Chefe2

Spawner ..> Entidade : creates
ControladorFase ..> Fase : manages
ControladorFase ..> Spawner : controls
Fase ..> Entidade : contains
Fase ..> Inimigo
Fase ..> Player
Fase ..> PowerUp
Updater ..> Movel : updates
Main ..> ControladorFase : starts
Main ..> GameLib : uses
Contexto ..> ControladorFase
Contexto ..> Updater
Evento ..> Fase

@enduml